@@ -18,15 +18,25 @@
 
 -uart tsconf, tbblue y zxuno: quitar printf de debug de ahi y de chardevice y uartbridge
 
--probar zonas memoria
+-listado de caracteristicas exclusivas que solo estan en ZEsarUX y en ningun otro emulador de Spectrum
 
--Probar sprites hardware ver 
+-Probar watches sin multitarea 
 
 -Puerto 57 tsconf es mmc??
 
 -tsconf: quiza algunas demos no se ven bien efectos de linea debidos al turbo? se ven mas arriba: ejemplos chess, 200, 
 
--grabar binario si ponemos 0, debe grabar total de zona memoria
+-Copiar datos entre zonas memoria 
+
+-menu debug cpu: lineas desensamblado que aumente si ventana mas grande
+
+-leer audio casette
+
+-.nex file arrancar en 14 MHz
+https://specnext.dev/wiki/NEX_file_format
+
+-aumentar sprites por linea next
+-actualizar sd card next
 
 -soporte LFN para esxdos handler. quiza acortar archivos al listar con "dir" y similares. que hacer si hacen fopen de archivo largo?
 acortar archivo... pero habra que acortar tambien ruta subdirectorios....
